...

    const navigateHandleEvent = (e) => {
        if (Platform.OS == 'android' && isTablet()) { navigation?.canGoBack() && navigation?.goBack(); }

        if (isTablet() &&
            (e.screen == 'MainTab'
                || e.screen == 'SearchTab'
                || e.screen == 'Favorites'
                || e.screen == 'AboutUs'
                || e.screen == 'AboutUsStores'
                || e.screen == 'AccountSettings')
        ) {
            canGoBack();
...
                    let screen = '';

                    if (routeName == 'MainTab') {
                        screen = `${store?.company} - Início`;
                    } else if (routeName == 'SearchTab') {
                        screen = `${store?.company} - Estoque`;
                    } else if (routeName == 'AccountTab') {
                        screen = `${store?.company} - Loja`;
                    } else if (routeName == 'Favorites') {
                        screen = `${store?.company} - Favoritos`;
                    } else if (routeName == 'AboutUs') {
                        screen = `${store?.company} - Sobre nós`;
                    } else if (routeName == 'AboutUsStores') {
...
